@@ -1,3 +1,11 @@
+2005-06-27  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/index.html: update links.
+	
+	* fr/install/index.html: translation of the new file.
+	
+	* fr/install/using.html: update links.
+
 2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/stable.ihtml: v2.5
